// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse 1`] = `
<DocumentFragment>
  <div>
    <p>
      <a
        class="btn btn-primary"
        href="#"
      >
        Link with href
      </a>
    </p>
    <div
      class="collapse"
    >
      <div
        class="card card-body"
      >
        hi
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Collapse 2`] = `
<DocumentFragment>
  <div>
    <p>
      <a
        class="btn btn-primary"
        href="#"
      >
        Link with href
      </a>
    </p>
    <div
      class="collapse show"
    >
      <div
        class="card card-body"
      >
        hi
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Collapse 3`] = `
<DocumentFragment>
  <div>
    <p>
      <a
        class="btn btn-primary"
        href="#"
      >
        Link with href
      </a>
    </p>
    <div
      class="collapse"
    >
      <div
        class="card card-body"
      >
        hi
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Collapse 4`] = `
<DocumentFragment>
  <div>
    <p>
      <a
        class="btn btn-primary"
        href="#"
      >
        Link with href
      </a>
    </p>
    <div
      class="collapse show"
    >
      <div
        class="card card-body"
      >
        hi
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Collapse2 1`] = `
<DocumentFragment>
  <div>
    <p>
      <a
        class="btn btn-primary"
        href="#"
      >
        Link with href
      </a>
    </p>
    <div
      class="collapse show"
    >
      <div
        class="card card-body"
      >
        i am grut
      </div>
    </div>
  </div>
</DocumentFragment>
`;
